Completed Navigation bar and HotelCard display

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -23,6 +23,35 @@
     box-shadow: 2px 2px 5px 4px rgba(0,0,0,.1);
 }
 
+.form-container {
+    background-color: #fff;
+    height: 2.75rem;
+    border-radius: 4px;
+}
+
+.form-container:hover {
+    box-shadow: 4px rgba(0,0,0,.1);
+}
+
+.form-option {
+    font-size: .875rem;
+    padding: 8px;
+    color: var(--text-color-primary);
+}
+
+.border-right-1px {
+    border-right: 1px solid var(--accent-color);
+    height: 70%;
+}
+
+.search {
+    background-color: var(--primary-color);
+    height: 100%;
+    padding: 8px;
+    font-size: 1.875rem;
+    color: #fff;
+}
+
 .profile-option{
     color: var(--text-color-primary);
     font-size: 2.5rem;
