--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
 @import url("https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url("./components/Navbar/Navbar.css");
 
 :root {
   --background-color: #fafafaf0;
